# Goodshyt-Governance

./: README.md  pyproject.toml
docs/: architecture.md  branding.md  index.md  quickstart.md
src/goodshyt_governance/: api.py  models.py  policies.py  rules.py  service.py
tests/: test_service.py
